--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "tec-events",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "7.4.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "prod": "webpack -p"
   },
