--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "tec-events",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "engines": {
-    "node": "7.4.0"
+    "node": "7.4.0",
+    "npm": "4.0.5"
   },
   "scripts": {
     "start": "webpack-dev-server",
