--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,12 @@
     "react",
     "babel-preset-es2015",
     "babel-preset-stage-3"
-  ]
+  ],
+  "env": {
+    "development": {
+      "presets": [
+        "react-hmre"
+      ]
+    }
+  }
 }
