--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "start": "webpack-dev-server",
-    "prod": "webpack -p"
+    "prod": "webpack -p",
+    "build": "NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
+    "start": "node ./app.js"
   },
   "dependencies": {
     "babel-core": "^6.21.0",
